--- a/vercel.json
+++ b/vercel.json
@@ -13,7 +13,7 @@
     },
     {
       "src": "/(.*)",
-      "dest": "/build/index.html"
+      "dest": "/Backend/build/index.html"
     }
   ],
   "env": {
