--- a/vercel.json
+++ b/vercel.json
@@ -1,35 +1,22 @@
 {
-  "functions": {
-    "api/validate.py": {
-      "runtime": "python3.9",
-      "maxDuration": 60
-    },
-    "api/export-pdf.py": {
-      "runtime": "python3.9",
-      "maxDuration": 30
-    },
-    "api/health.py": {
-      "runtime": "python3.9",
-      "maxDuration": 10
-    }
-  },
-  "headers": [
+  "routes": [
     {
-      "source": "/api/(.*)",
-      "headers": [
-        {
-          "key": "Access-Control-Allow-Origin",
-          "value": "*"
-        },
-        {
-          "key": "Access-Control-Allow-Methods",
-          "value": "GET, POST, OPTIONS"
-        },
-        {
-          "key": "Access-Control-Allow-Headers",
-          "value": "Content-Type"
-        }
-      ]
+      "src": "Backend/api/(.*)",
+      "dest": "/api/$1"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/Backend/build/$1"
+    },
+    {
+      "handle": "filesystem"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/Backend/build/index.html"
     }
-  ]
+  ],
+  "env": {
+    "PYTHONPATH": "./"
+  }
 }
