--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,17 @@
 {
+  "functions": {
+    "Backend/api/*.py": {
+      "runtime": "python3.9"
+    }
+  },
   "routes": [
     {
-      "src": "Backend/api/(.*)",
-      "dest": "/api/$1"
+      "src": "/api/(.*)",
+      "dest": "/Backend/api/$1.py"
     },
     {
-      "src": "/(.*)",
+      "src": "/(.*\\.(js|css|png|jpg|jpeg|gif|ico|svg)$)",
       "dest": "/Backend/build/$1"
-    },
-    {
-      "handle": "filesystem"
     },
     {
       "src": "/(.*)",
