fix runtime versions

--- a/vercel.json
+++ b/vercel.json
@@ -1,39 +1,41 @@
 {
-  
-"functions": {
-  "Backend/api/validate.py": {
-    "runtime": "vercel-python@3.9"
+  "functions": {
+    "Backend/api/validate.py": {
+      "runtime": "python@3.9",
+      "includeFiles": "Backend/**"
+    },
+    "Backend/api/export-pdf.py": {
+      "runtime": "python@3.9",
+      "includeFiles": "Backend/**"
+    },
+    "Backend/api/health.py": {
+      "runtime": "python@3.9",
+      "includeFiles": "Backend/**"
+    }
   },
-  "Backend/api/export-pdf.py": {
-    "runtime": "vercel-python@3.9"
-  },
-  "Backend/api/health.py": {
-    "runtime": "vercel-python@3.9"
-  }
-},
   "routes": [
     {
       "src": "/api/validate",
-      "dest": "Backend/api/validate.py"
+      "dest": "/Backend/api/validate.py"
     },
     {
       "src": "/api/export-pdf",
-      "dest": "Backend/api/export-pdf.py"
+      "dest": "/Backend/api/export-pdf.py"
     },
     {
       "src": "/api/health",
-      "dest": "Backend/api/health.py"
+      "dest": "/Backend/api/health.py"
     },
     {
-      "src": "/(.*\\.(js|css|png|jpg|jpeg|gif|ico|svg))$",
-      "dest": "frontend/build/$1"
+      "src": "/(.*\\.(js|css|png|jpg|jpeg|gif|ico|svg)$)",
+      "dest": "/Backend/build/$1"
     },
     {
       "src": "/(.*)",
-      "dest": "frontend/build/index.html"
+      "dest": "/Backend/build/index.html"
     }
   ],
   "env": {
-    "PYTHONPATH": "./Backend"
+    "PYTHONPATH": "./"
   }
 }
